XRWH-217 z-indexes are sorted and fixed sticky search animation bug

--- a/plugins/rocks.xml.webhelp/resources/css/layout-common.css
+++ b/plugins/rocks.xml.webhelp/resources/css/layout-common.css
@@ -163,7 +163,7 @@
     background-color: var(--header-bg-color);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
-    z-index: 5;
+    z-index: 50;
 }
 
 .main-header {
@@ -237,7 +237,7 @@ input#header-search-input::-webkit-search-results-decoration,
     justify-self: end;
     margin-right: 40px;
     display: none;
-    z-index: 1;
+    z-index: 10;
 }
 
 .search-buttons-separator {
