--- a/plugins/rocks.xml.webhelp/resources/css/topic.css
+++ b/plugins/rocks.xml.webhelp/resources/css/topic.css
@@ -294,7 +294,7 @@ h6.title {
 .top-nav-buttons-container-wrapper {
     background-color: #f8f8f8;
     padding: 20px 0;
-    z-index: 5;
+    z-index: 50;
 }
 
 .top-nav-buttons-container {
@@ -578,7 +578,7 @@ a:hover{
     position: absolute;
     background-color: #f8f8f8;
     min-width: 160px;
-    z-index: 1;
+    z-index: 10;
     right: 0;
     top: 3.3em;
     width: 16rem;
@@ -642,7 +642,7 @@ a:hover{
     background-color: #f1f1f1;
     max-width: 5px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+    z-index: 10;
     right: 1.6em;
     top: 2.4em;
 }
@@ -711,7 +711,7 @@ a:hover{
     padding: 1px 1rem;
     position: sticky;
     top: -1px;
-    z-index: 4;
+    z-index: 40;
     background: #ffffff;
 }
 
@@ -721,8 +721,7 @@ a:hover{
     top: 0;
     height: 60px;
     opacity: 0;
-    transition: all ease-in-out .5s;
-    z-index: 3;
+    z-index: 30;
     transform: translateY(-100%);
     background-color: #ffffff;
     box-shadow: 0 10px 10px #f3f3f3;
@@ -731,6 +730,7 @@ a:hover{
 .is-sticky + .topic-page-sticky-search-container.expanded {
     opacity: 100%;
     transform: translateY(100%);
+    transition: all ease-in-out .5s;
 }
 
 .topic-page-sticky-search-container .search-input-container {
@@ -785,7 +785,7 @@ a:hover{
     width: 33.33333333%;
     transform: translateX(0%);
     transition: all 1s ease-in-out .5s;
-    z-index: 2;
+    z-index: 20;
     pointer-events: none;
 }
 
@@ -1173,6 +1173,7 @@ li.linklist {
     padding: 0 0.75em;
     height: 5.5rem;
     pointer-events: none;
+    z-index: 40;
 }
 
 #button-back-to-top {
